docs(core): record owner completion regression and throughput validation